# gloo-playground

./: .bazelrc  .gitignore  Makefile  Makefile.conf.sample  README.md  WORKSPACE  go.mod  go.sum  package.json  playground.tf  rest-client.http
.devcontainer/: Dockerfile  devcontainer.json
addin/: BUILD.bazel  manifest.xml  nginx.conf  package.json  webpack.config.js
addin/client/: client.js  envoy.yaml  index.html  service_grpc_web_pb.js  service_pb.js  webpack.config.js
addin/src/taskpane/: taskpane.html  taskpane.ts
api/proto/: BUILD.bazel  service.proto
client-go/: BUILD.bazel  client.go
gloo/: rdr-virtualservice.yaml  virtualservice.yaml
helm/companion/: Chart.yaml  values.yaml
helm/companion/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/companion/templates/tests/: test-connection.yaml
helm/gloo-playground/: Chart.yaml  values.yaml
helm/gloo-playground/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
helm/gloo-playground/templates/tests/: test-connection.yaml
helm/playground-cli/: Chart.yaml  values.yaml
helm/playground-cli/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
helm/playground-cli/templates/tests/: test-connection.yaml
knative/: service.yaml
libs/kncloudevents/: BUILD.bazel
src/: BUILD.bazel  main.go
tooling/minikube/: setup-cluster.sh
